[gd_scene load_steps=34 format=3 uid="uid://b614yacjdob64"]

[ext_resource type="Texture2D" uid="uid://jvprl2nbfryr" path="res://Assets/Textures/planks.png" id="1_hybjd"]
[ext_resource type="Script" uid="uid://rndlieotpgb4" path="res://Scripts/oven_scene.gd" id="1_mn46d"]
[ext_resource type="Texture2D" uid="uid://bpxrliw0vg30q" path="res://Assets/Textures/Metals/metall001-new.png" id="2_0elqv"]
[ext_resource type="Shader" uid="uid://b7w8vso1bv4mm" path="res://Shaders/oven_heat_schlieren.gdshader" id="2_52l15"]
[ext_resource type="Texture2D" uid="uid://dgm02mgrj88xd" path="res://Assets/Textures/Metals/metall003-new.png" id="2_v1q3x"]
[ext_resource type="Texture2D" uid="uid://45uww4cmse5c" path="res://Assets/Textures/Metals/metall001-new-nm.png" id="3_4elvc"]
[ext_resource type="Script" uid="uid://bo4dqp4e7mii0" path="res://Scripts/game_camera.gd" id="3_8xe52"]
[ext_resource type="Texture2D" uid="uid://y017gpg7nqwd" path="res://Assets/Textures/Metals/metall003-new-nm.png" id="3_q8v73"]
[ext_resource type="Script" uid="uid://beovhj8ophdrq" path="res://Scripts/3d_handle_UI.gd" id="5_x5r4b"]
[ext_resource type="PackedScene" uid="uid://bqhqwc8kdgbeb" path="res://Scenes/Dice/dice_well.tscn" id="7_ifqwi"]
[ext_resource type="PackedScene" uid="uid://dwgk33h0g8ee0" path="res://Scenes/witch.tscn" id="8_8xe52"]

[sub_resource type="Environment" id="Environment_hybjd"]
background_mode = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kk8vj"]
albedo_color = Color(0.601223, 0.601223, 0.601223, 1)
albedo_texture = ExtResource("2_0elqv")
normal_enabled = true
normal_texture = ExtResource("3_4elvc")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0elqv"]
albedo_texture = ExtResource("2_v1q3x")
normal_enabled = true
normal_texture = ExtResource("3_q8v73")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fo3s5"]
albedo_color = Color(0.0264117, 0.00799411, 0.0588167, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uw635"]
transparency = 1
albedo_color = Color(0.0627451, 0.192157, 0.360784, 0.360784)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_pod84"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_30i6t"]
noise = SubResource("FastNoiseLite_pod84")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_awar5"]
render_priority = 0
shader = ExtResource("2_52l15")
shader_parameter/noise_texture = SubResource("NoiseTexture2D_30i6t")
shader_parameter/distortion_strength = 0.02
shader_parameter/turbulence_scale = 3.0
shader_parameter/flow_speed = 0.0
shader_parameter/vertical_rise_speed = 0.8
shader_parameter/shimmer_frequency = 8.0
shader_parameter/depth_fade_distance = 2.0
shader_parameter/edge_softness = 0.3
shader_parameter/distortion_direction = Vector2(0.3, 1)
shader_parameter/chromatic_aberration = 0.003

[sub_resource type="QuadMesh" id="QuadMesh_p1st1"]
flip_faces = true
size = Vector2(2, 3)

[sub_resource type="Animation" id="Animation_wvgpl"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Oven/OvenDoor:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Oven/OvenDoor:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Oven/OvenDoor:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.5708, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Oven/OvenTray:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-1.02558, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Oven/OvenTray:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.51948, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Oven/OvenTray:position:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Oven/OvenTray:rotation:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Oven/OvenTray:rotation:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Oven/OvenTray:rotation:z")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Oven/OvenLight:light_energy")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(16, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Oven/OvenLight:light_size")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.507, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Oven/OvenLight:light_specular")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(3.514, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("GameCamera:rotation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.22173, 1.5708, 3.3078e-08)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("GameCamera:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(3.8, 2, 0)]
}

[sub_resource type="Animation" id="Animation_0elqv"]
resource_name = "dice_rool"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameCamera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector3(-1.18673, 1.5708, 2.6444e-08), Vector3(-1.13278, 1.5708, 3.95726e-07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameCamera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector3(3.85446, 2.09635, 0), Vector3(4.12141, 2.48643, 0)]
}

[sub_resource type="Animation" id="Animation_1sv68"]
resource_name = "new_animation"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Oven/OvenDoor:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 2, 2, 0, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0.05, 0, 0, -0.05, 0, 0.05, 0, 0, -0.05, 0, 0, 0, 0, -0.05, 0, 0, 0, 0, -0.05, 0, 0.05, 0, 0, 0, 0, 0.05, 0, 0, 0, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.3, 0.6, 1, 1.19719, 1.53333, 1.66667)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Oven/OvenDoor:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 2, 2, 0, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0.05, 0, 0, -0.05, 0, 0.05, 0, 0, -0.05, 0, 0, 0, 0, -0.05, 0, 0, 0, 0, -0.05, 0, 0.05, 0, 0, 0, 0, 0.05, 0, 0, 0, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.3, 0.6, 1, 1.19719, 1.53333, 1.66667)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Oven/OvenDoor:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2, 2, 2, 0, 0, 0, 0),
"points": PackedFloat32Array(1.5708, 0, 0, 0.05, -0.29503, -0.199386, -0.05, 0.144041, 0.05, -0.144041, -0.15769, -0.05, -0.00694932, 0, 0, -0.15769, -0.05, -0.00694932, 0, 0, -0.199386, -0.05, 0.144041, 0.05, -0.144041, 1.65597, 0, 0, 0.05, -0.29503, 1.5708, 0, 0, 0.05, -0.29503),
"times": PackedFloat32Array(0, 0.3, 0.6, 1, 1.19719, 1.53333, 1.66667)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Oven/OvenTray:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(2, 2, 2, 2, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(-1.00277, 0, 0, 0.0166667, -0.00380105, -1.02558, -0.0166667, -0.109844, 0.0333333, 0.219688, 0.974424, -0.0333333, -0.130177, 0.05, 0.195265, 0.927075, -0.05, 0.00789158, 0, 0, 0.927075, -0.05, 0.00789158, 0, 0, 0.974424, -0.0333333, -0.130177, 0.05, 0.195265, -1.02558, -0.0166667, -0.109844, 0.0333333, 0.219688, -1.00277, 0, 0, 0.0166667, -0.00380105, -1.00277, 0, 0, 0.0166667, -0.00380105),
"times": PackedFloat32Array(0, 0.1, 0.3, 0.6, 1, 1.19719, 1.36667, 1.53333, 1.66667)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Oven/OvenTray:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(2, 2, 2, 2, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1.51948, 0, 0, 0.0166667, 0, 1.51948, -0.0166667, 0.00487015, 0.0333333, -0.0097403, 1.43182, -0.0333333, 0.00584418, 0.05, -0.00876627, 1.43182, -0.05, 0, 0, 0, 1.43182, -0.05, 0, 0, 0, 1.43182, -0.0333333, 0.00584418, 0.05, -0.00876627, 1.51948, -0.0166667, 0.00487015, 0.0333333, -0.0097403, 1.51948, 0, 0, 0.0166667, 0, 1.51948, 0, 0, 0.0166667, 0),
"times": PackedFloat32Array(0, 0.1, 0.3, 0.6, 1, 1.19719, 1.36667, 1.53333, 1.66667)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Oven/OvenTray:position:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(2, 2, 2, 2, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0.0166667, 0, 0, -0.0166667, 0, 0.0333333, 0, 0, -0.0333333, 0, 0.05, 0, 0, -0.05, 0, 0, 0, 0, -0.05, 0, 0, 0, 0, -0.0333333, 0, 0.05, 0, 0, -0.0166667, 0, 0.0333333, 0, 0, 0, 0, 0.0166667, 0, 0, 0, 0, 0.0166667, 0),
"times": PackedFloat32Array(0, 0.1, 0.3, 0.6, 1, 1.19719, 1.36667, 1.53333, 1.66667)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Oven/OvenTray:rotation:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(2, 2, 2, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0.0333333, 0, 0, -0.0333333, 0, 0.05, 0, 0, -0.05, 0, 0, 0, 0, -0.05, 0, 0, 0, 0, -0.0333333, 0, 0.05, 0, 0, 0, 0, 0.0333333, 0),
"times": PackedFloat32Array(0.1, 0.3, 0.6, 1, 1.19719, 1.36667)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Oven/OvenTray:rotation:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(2, 2, 2, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0.0333333, 0, 0, -0.0333333, 0, 0.05, 0, 0, -0.05, 0, 0, 0, 0, -0.05, 0, 0, 0, 0, -0.0333333, 0, 0.05, 0, 0, 0, 0, 0.0333333, 0),
"times": PackedFloat32Array(0.1, 0.3, 0.6, 1, 1.19719, 1.36667)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Oven/OvenTray:rotation:z")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(2, 2, 2, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0.0333333, -0.0136543, -0.0819258, -0.0333333, 0.00442965, 0.05, -0.00664447, -0.0664447, -0.05, -0.00258018, 0, 0, -0.0664447, -0.05, -0.00258018, 0, 0, -0.0819258, -0.0333333, 0.00442965, 0.05, -0.00664447, 0, 0, 0, 0.0333333, -0.0136543),
"times": PackedFloat32Array(0.1, 0.3, 0.6, 1, 1.19719, 1.36667)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Oven/OvenLight:light_energy")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(16, -0.25, 0, 0.25, 0, 1.508, -0.25, 0, 0.25, 0, 6.494, -0.25, 0, 0.25, 0, 6.494, -0.25, 0, 0.25, 0, 4.481, -0.25, 0, 0.25, 0, 1.508, -0.25, 0, 0.25, 0, 1.508, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.6, 1, 1.2, 1.36667, 1.6, 2)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Oven/OvenLight:light_size")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.507, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.152, -0.25, 0, 0.25, 0, 0.507, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6, 1, 1.2, 2)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Oven/OvenLight:light_specular")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(3.514, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 0.732, -0.25, 0, 0.25, 0, 3.514, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6, 1, 1.2, 2)
}

[sub_resource type="Animation" id="Animation_kk8vj"]
resource_name = "view_table"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameCamera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.3),
"transitions": PackedFloat32Array(0.5, -2, 2),
"update": 0,
"values": [Vector3(0, 1.5708, 0), Vector3(-1.0472, 1.5708, 0), Vector3(-1.18673, 1.5708, 2.6444e-08)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameCamera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(3.5, 2.44, 0), Vector3(3.85446, 2.09635, 0)]
}

[sub_resource type="Animation" id="Animation_52l15"]
resource_name = "oven_to_baker"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameCamera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector3(0, 1.5708, 0), Vector3(0, 3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_hybjd"]
resource_name = "view_oven"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameCamera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.733333, 1),
"transitions": PackedFloat32Array(0.5, -2, 2),
"update": 0,
"values": [Vector3(-1.22173, 1.5708, 3.3078e-08), Vector3(0.0349066, 1.5708, 0), Vector3(0, 1.5708, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameCamera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(3.85446, 2.09635, 0), Vector3(3.5, 2.44, 0)]
}

[sub_resource type="Animation" id="Animation_f5trb"]
resource_name = "table_to_baker"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameCamera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector3(-1.22173, 1.5708, 3.3078e-08), Vector3(0, 3.14159, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameCamera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(3.85446, 2.09635, 0), Vector3(3.5, 2.44, 0)]
}

[sub_resource type="Animation" id="Animation_8xe52"]
resource_name = "baker_to_oven"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameCamera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 0.5),
"update": 0,
"values": [Vector3(0, 3.14159, 0), Vector3(0, 1.5708, 0)]
}

[sub_resource type="Animation" id="Animation_v1q3x"]
resource_name = "baker_to_table"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameCamera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector3(0, 3.14159, 0), Vector3(-1.22173, 1.5708, 3.3078e-08)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameCamera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(3.5, 2.44, 0), Vector3(3.85446, 2.09635, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4cb8m"]
_data = {
&"RESET": SubResource("Animation_wvgpl"),
&"dice_roll": SubResource("Animation_0elqv"),
&"open_oven": SubResource("Animation_1sv68"),
&"oven_to_table": SubResource("Animation_kk8vj"),
&"oven_to_witch": SubResource("Animation_52l15"),
&"table_to_oven": SubResource("Animation_hybjd"),
&"table_to_witch": SubResource("Animation_f5trb"),
&"witch_to_oven": SubResource("Animation_8xe52"),
&"witch_to_table": SubResource("Animation_v1q3x")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e1l8n"]
albedo_texture = ExtResource("1_hybjd")

[sub_resource type="BoxShape3D" id="BoxShape3D_4rjkd"]
size = Vector3(5.12, 0.1, 2.88)

[sub_resource type="BoxShape3D" id="BoxShape3D_x5r4b"]
size = Vector3(2.65454, 0.1, 1.67383)

[node name="OvenScene" type="Node3D"]
script = ExtResource("1_mn46d")

[node name="Environment" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_hybjd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 0, 0)
light_energy = 0.1
shadow_enabled = true
sky_mode = 1

[node name="Floor" type="CSGBox3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.89014, 0, 0)
size = Vector3(17.7803, 1, 21)
material = SubResource("StandardMaterial3D_kk8vj")

[node name="FrontWall" type="CSGBox3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.64722, 2.00667, 0)
size = Vector3(4.29443, 7.28735, 17)
material = SubResource("StandardMaterial3D_kk8vj")

[node name="CSGBox3D4" type="CSGBox3D" parent="Environment/FrontWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.18169, -0.117126, 0)
operation = 2
size = Vector3(2.59578, 1.76575, 2.50977)
material = SubResource("StandardMaterial3D_kk8vj")

[node name="LeftWall" type="CSGBox3D" parent="Environment"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6.35278, 2.00667, 10)
size = Vector3(4.29443, 7.28735, 17)
material = SubResource("StandardMaterial3D_kk8vj")

[node name="RightWall" type="CSGBox3D" parent="Environment"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6.35278, 2.00667, -11)
size = Vector3(4.29443, 7.28735, 17)
material = SubResource("StandardMaterial3D_kk8vj")

[node name="Oven" type="Node" parent="."]

[node name="OvenTray" type="CSGBox3D" parent="Oven"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02558, 1.51948, 0)
material_override = SubResource("StandardMaterial3D_0elqv")
size = Vector3(2.29114, 0.12915, 2.49609)
material = SubResource("StandardMaterial3D_fo3s5")

[node name="OvenDoor" type="Node3D" parent="Oven"]
transform = Transform3D(-3.61999e-06, -1, 0, 1, -3.61999e-06, 0, 0, 0, 1, 0.34759, 1.00667, 0)

[node name="CSGBox3D4" type="CSGBox3D" parent="Oven/OvenDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.879929, -0.065705, 0)
size = Vector3(1.73927, 0.12915, 2.49609)
material = SubResource("StandardMaterial3D_fo3s5")

[node name="CSGBox3D5" type="CSGBox3D" parent="Oven/OvenDoor/CSGBox3D4"]
operation = 2
size = Vector3(1.46484, 0.366943, 2.28125)
material = SubResource("StandardMaterial3D_fo3s5")

[node name="CSGBox3D5" type="CSGBox3D" parent="Oven/OvenDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.879929, -0.065705, 0)
size = Vector3(1.73927, 0.0488281, 2.49609)
material = SubResource("StandardMaterial3D_uw635")

[node name="OvenLight" type="OmniLight3D" parent="Oven"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.169253, 1.96589, 0)
light_color = Color(0.898039, 0.447059, 0, 1)
light_energy = 16.0
light_size = 0.507
light_specular = 3.514
shadow_enabled = true
shadow_opacity = 0.93
omni_range = 3.846

[node name="OvenHeatShader" type="MeshInstance3D" parent="Oven"]
transform = Transform3D(-0.0850469, 3.51422e-07, 0.996377, 0.996377, -3.60316e-06, 0.0850469, 3.61999e-06, 1, -4.37114e-08, 0.262543, 2.00305, 0)
material_override = SubResource("ShaderMaterial_awar5")
mesh = SubResource("QuadMesh_p1st1")
skeleton = NodePath("../OvenDoor")

[node name="GameCamera" type="Camera3D" parent="."]
transform = Transform3D(-3.65107e-06, -0.939692, 0.34202, 1.13134e-08, 0.342021, 0.939692, -1, 3.43475e-06, -1.23811e-06, 3.8, 2, 0)
doppler_tracking = 2
current = true
script = ExtResource("3_8xe52")

[node name="AudioListener3D" type="AudioListener3D" parent="GameCamera"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_4cb8m")
}
playback_auto_capture_transition_type = 10

[node name="IngredientTable" type="CSGBox3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3.1, 0.1, 0)
size = Vector3(3, 1, 2)
material = SubResource("StandardMaterial3D_e1l8n")

[node name="UIViewport" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.09468, 0.673444, 0)
script = ExtResource("5_x5r4b")

[node name="Area3D" type="Area3D" parent="UIViewport"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="UIViewport/Area3D"]
shape = SubResource("BoxShape3D_4rjkd")
disabled = true

[node name="CollisionShape3D2" type="CollisionShape3D" parent="UIViewport/Area3D"]
shape = SubResource("BoxShape3D_x5r4b")

[node name="DiceWell" parent="." instance=ExtResource("7_ifqwi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.14683, 0, 0)

[node name="Witch" parent="." instance=ExtResource("8_8xe52")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 2.1, 3.1)

[node name="WitchRedLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.66596, 1.45611, 4.58433)
light_color = Color(0.556863, 0.180392, 0.168627, 1)
light_specular = 3.514
shadow_enabled = true
shadow_normal_bias = 0.0
shadow_transmittance_bias = 2.601
shadow_opacity = 0.93
shadow_blur = 0.0
distance_fade_enabled = true

[node name="WitchFrontLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.66596, 0.45611, 2.58433)
light_color = Color(0.994108, 0.994108, 0.994108, 1)
light_energy = 0.21
shadow_enabled = true
shadow_normal_bias = 0.0
shadow_transmittance_bias = 2.601
shadow_opacity = 0.93
shadow_blur = 0.0
distance_fade_enabled = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]

[editable path="DiceWell"]
